--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
-<script src="assets/js/aframe.min.js"></script>
-<script src="assets/js/aframe-ar.js"></script>
-<script src="assets/js/aframe-extras.loaders.min.js"></script>
+<script src="Assets/js/aframe.min.js"></script>
+<script src="Assets/js/aframe-ar.js"></script>
+<script src="Assets/js/aframe-extras.loaders.min.js"></script>
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-		<button>
-     Habilitar Sonido
-    </button>
+	<button>
+     	Habilitar Sonido
+	</button>
 	</div>
 
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,9 +15,9 @@
 
     <a-scene embedded arjs="debugUIEnabled: false; patternRatio: 0.90" vr-mode-ui="enabled: false">   
 
-    <a-marker preset='custom' type='pattern' url='assets/pattern-3e.patt'>
+    <a-marker preset='custom' type='pattern' url='Assets/pattern-3e.patt'>
 	    
-    <video id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay loop controls muted src="assets/3e.mp4"></video>
+    <video id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay loop controls muted src="Assets/media/3e.mp4"></video>
     <a-video src="#mivideo" position="0 0 0" scale="1 1 1" rotation="270 0 0" ></a-video>
    
    <script> 
