--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,12 @@
 	</button>
 	</div>
 
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no," />
+<meta name="description" content="AR Aframe ChromaKey">
+<meta name="mobile-web-app-capable" content="yes">
+<meta http-equiv="Feature-Policy" content="camera '*'" /> 
+
 
 <body style='margin : 0px; overflow: hidden;'>
 
